De-cluttered CmdParser.parser()
moved identification switch statement to new function, replaced if statement with try-catch and refactored the logic so there are fewer repeats